# shorty_erl

./: .gitignore  README.md  func.py  pyproject.toml  setup.cfg  shortner_algo.py  shorty_erl.py
