[metadata]
name = shorty_url
version = attr: shorty_url.__version__
author = ian hundere
author_email = ianhundere@gmail.com

[options]
py_modules = shorty_url
python_requires = >=3.6
install_requires = requests >=2.0,<3.0

[options.extras_require]
test =
    pytest
    pytest-vcr
    pytest-cov

[options.entry_points]
console_scripts =
    shorty_url = shorty_url.application:main
