[metadata]
name = shorty_erl
version = attr: shorty_erl.__version__
author = ian hundere
author_email = ianhundere@gmail.com

[options]
py_modules = shorty_erl
python_requires = >=3.6
install_requires = requests >=2.0,<3.0

[options.extras_require]
test =
    pytest
    pytest-vcr
    pytest-cov

[options.entry_points]
console_scripts =
    shorty_erl = shorty_erl.application:main
